# tal-cardreader

./: .gitignore  PLUGINS.md  README.md  build64.bat  meson.build
src/: cardio.def  cardreader.def  helpers.c  helpers.h  meson.build
src/cardio_plugin/: cardio.c  cardio.h  dllmain.c
src/cardreader_plugin/: dllmain.c
src/cardreader_plugin/CardIO/: cardio.c  cardio.h
src/cardreader_plugin/SmartCard/: scard.c  scard.h
subprojects/: minhook.wrap  tomlc99.wrap
subprojects/packagefiles/minhook/: meson.build
subprojects/packagefiles/tomlc99/: meson.build
